--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Custom_White_Background"
-    android:theme="@android:style/Theme.NoTitleBar"
     tools:context=".SignUp">
 
     <RelativeLayout
@@ -71,10 +70,17 @@
                 android:inputType="textPassword"
                 android:hint="Confirm Password*"/>
 
+            <glipped.com.glipped.Tools.CustomTextViews.LatoLiteTextView
+                android:id="@+id/sign_up_account_type_text_view"
+                android:layout_below="@id/sign_up_confirm_password"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Account Type"/>
+
             <Spinner
                 android:id="@+id/sign_up_account_type"
-                android:layout_below="@id/sign_up_confirm_password"
-                android:layout_marginTop="20dp"
+                android:layout_below="@id/sign_up_account_type_text_view"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"/>
 
