--- a/app/src/main/res/layout/activity_causes.xml
+++ b/app/src/main/res/layout/activity_causes.xml
@@ -5,7 +5,7 @@
     android:id="@+id/left_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@android:style/Theme.NoTitleBar"
+    android:background="@color/Custom_White_Background"
     tools:context=".Causes">
 
     <RelativeLayout
