--- a/app/src/main/res/layout/activity_causes.xml
+++ b/app/src/main/res/layout/activity_causes.xml
@@ -22,6 +22,12 @@
 
         </android.support.v7.widget.Toolbar>
 
+        <ListView
+            android:id="@+id/causes_list_view"
+            android:layout_below="@id/toolbar"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"/>
+
     </RelativeLayout>
 
     <include
