Added cause list

--- a/app/src/main/res/layout/cause_list_template.xml
+++ b/app/src/main/res/layout/cause_list_template.xml
@@ -5,6 +5,11 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
+    <ImageView
+        android:id="@+id/cause_list_template_image_holder"
+        android:layout_width="fill_parent"
+        android:layout_height="250dp" />
+
     <glipped.com.glipped.Tools.CustomTextViews.LatoLiteTextView
         android:id="@+id/cause_list_template_text_holder"
         android:layout_width="wrap_content"
@@ -12,11 +17,7 @@
         android:background="@color/LightGrey"
         android:layout_centerInParent="true"
         android:padding="5dp"
-        android:hint="Hello"/>
-
-    <ImageView
-        android:id="@+id/cause_list_template_image_holder"
-        android:layout_width="fill_parent"
-        android:layout_height="250dp" />
+        android:textSize="18sp"
+        android:hint="Cause"/>
 
 </RelativeLayout>
